# pye-prospector

./: .env.example  .gitignore  DEPLOY.md  README.md  eslint.config.js  index.html  package-lock.json  package.json  tailwind.config.js  tsconfig.json  tsconfig.tsbuildinfo  vite.config.ts  vitest.config.ts
.cargo/: config.toml
.github/workflows/: ci.yml  release.yml
docs/: ARCHITECTURE.md  DATA-SOURCES.md  IMPROVEMENT-ROADMAP-MAP.json  IMPROVEMENT-ROADMAP-WAVE2.json  IMPROVEMENT-ROADMAP.json  PLAN.md
src/: App.tsx  config.ts  index.css  main.tsx  vite-env.d.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: README.md  icon.icns
src-tauri/migrations/: 0001_initial.sql  0002_scoring_notes_tasks.sql  0003_missing_fields.sql  0004_crm_features.sql  0005_indexes.sql  0006_company_cache.sql  0007_roof_obstacles.sql
src-tauri/src/: lib.rs  main.rs
src/components/: AIAssistant.tsx  Dashboard.tsx  DropLocationDialog.tsx  KanbanView.tsx  LocationDetails.tsx  LocationSummary.tsx  MapSearch.tsx  MapView.tsx  NotesAndTasks.tsx  QuickJumpMenu.tsx  ScoringBadge.tsx  SearchFilter.tsx  SettingsModal.tsx  ShortcutsHelp.tsx  Sidebar.tsx  SolarChart.tsx  StreetViewModal.tsx  TableView.tsx  ToastContainer.tsx
src/db/: database.ts
src/hooks/: useFilteredBuildings.ts  useKeyboard.ts
src/lib/: backup.ts  companyLookup.ts  companyResolver.ts  csv.test.ts  csv.ts  excel.ts  fetchUtils.test.ts  fetchUtils.ts  gemini.ts  geodesy.ts  industrialParks.ts  leadAutoFill.ts  leadScore.test.ts  leadScore.ts  mapInstance.ts  mapillary.ts  (+21 more)
(+2 files in other folders)
